""" Ensure this is a separate package """

load("@rules_cc_hdrs_map//rules:cc_hdrs.bzl", "cc_hdrs")

cc_hdrs(
    name = "headers",
    hdrs_map = {
        "b/public/includes/**": ["{filename}"],
    },
    public_hdrs = [
        "ping.hpp",
        "pong.hpp",
    ],
    visibility = ["//visibility:public"],
)
